data/derived/fa15/progs/unify/prog0326.ml.out
Characters 92-108:
  | head :: tail -> listReverse tail :: newList :: head;;
                    ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
